--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -2,11 +2,20 @@ name: Smoke Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 
 jobs:
-  test:
+  smoke:
     runs-on: ubuntu-latest
+    env:
+      WEB_URL: https://practicesoftwaretesting.com
+      API_URL: https://api.practicesoftwaretesting.com
+      USER_EMAIL: ${{ secrets.USER_EMAIL }}
+      USER_NAME: ${{ secrets.USER_NAME }}
+      USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v4
 
