--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,8 +11,8 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     env:
-      WEB_URL: https://practicesoftwaretesting.com
-      API_URL: https://api.practicesoftwaretesting.com
+      WEB_URL: ${{ vars.WEB_URL }}
+      API_URL: ${{ vars.API_URL }}
       USER_EMAIL: ${{ secrets.USER_EMAIL }}
       USER_NAME: ${{ secrets.USER_NAME }}
       USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
