--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -10,8 +10,8 @@ jobs:
   smoke:
     runs-on: ubuntu-latest
     env:
-      WEB_URL: https://practicesoftwaretesting.com
-      API_URL: https://api.practicesoftwaretesting.com
+      WEB_URL: ${{ vars.WEB_URL }}
+      API_URL: ${{ vars.API_URL }}
       USER_EMAIL: ${{ secrets.USER_EMAIL }}
       USER_NAME: ${{ secrets.USER_NAME }}
       USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
